--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "graphql": "^16.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "slate": "^0.112.0",
+    "slate-react": "^0.112.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
